[package]
name = "cronclearer"
description = "Making cron job outputs clearer and easier to debug."
categories = ["command-line-utilities"]
keywords = ["cron", "cli", "utility"]
authors = ["Micha Glave <coding@migmedia.de>"]
version = "1.0.0"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
tempfile = "3.17"

[dev-dependencies]
similar-asserts = "1.7"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
