[package]
name = "cronclearer"
description = "Making cron job outputs clearer and easier to debug."
categories = ["command-line-utilities"]
keywords = ["cron", "cli", "utility"]
authors = ["Micha Glave <coding@migmedia.de>"]
homepage = "https://github.com/migmedia/cronclearer"
version = "1.0.2"
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
getrandom = "0.3"

[dev-dependencies]
similar-asserts = "1.7"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
